# arbitrage

./: .gitignore  =0.100.0  =0.20.0  =11.0.0  =2.0.0  =3.8.0  Cargo.toml  CryptoArbitrageQuant.jl  Manifest.toml  Project.toml  README.md  activate_dev.sh  activate_env.sh  arbitrage_finder.py  enhanced_main.py  exchange_manager.py  main.py  one.sh  requirements-working.txt  requirements.txt  run_bot.py  test_bot.py  test_bot_fixed.py  test_complete_setup.py  test_enhanced_system.py  test_minimal.py  test_setup.py  trader.py  types.py.backup
.fingerprint/anyhow-48c3c69b8952b47d/: lib-anyhow  lib-anyhow.json
.fingerprint/anyhow-c1367eafd37e93e8/: build-script-build-script-build  build-script-build-script-build.json
.fingerprint/anyhow-d3966d5d2346003e/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/arrayvec-9f8710ba581fd406/: lib-arrayvec  lib-arrayvec.json
.fingerprint/async-trait-a2fc301df51de0d4/: lib-async_trait  lib-async_trait.json
.fingerprint/chrono-efc34962cd94e45e/: lib-chrono  lib-chrono.json
.fingerprint/combine-89573e82fd2fd863/: lib-combine  lib-combine.json
.fingerprint/crossbeam-014fc035d2ddf3cd/: lib-crossbeam  lib-crossbeam.json
.fingerprint/crossbeam-channel-c9218597b4038732/: lib-crossbeam_channel  lib-crossbeam_channel.json
configs/: bot.yml  exchanges.yml
go-execution/: go.mod  main.go
gpu-ml/: requirements-gpu.txt  setup_gpu.sh
julia-quant/: Project.toml
scripts/: deploy_enhanced_system.sh  install_all.sh  run_tests.sh  start_bot.sh
src/: config.py  types.py
(+226 files in other folders)
