[package]
name = "crypto-arbitrage-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dashmap = "5.5"
crossbeam = "0.8"
redis = { version = "0.23", features = ["tokio-comp"] }
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
pyo3 = { version = "0.19", features = ["extension-module"] }
